--- a/index.html
+++ b/index.html
@@ -679,7 +679,7 @@
                 <div style="text-align: center;">
                     <h2 class="section-header">happy headache</h2>
                     <p style="opacity: 0.8; max-width: 600px; margin: -20px auto 30px auto;">
-                        you don't listen to it on spotfy, so it will not do the website any harm if you don't listen to it on here as well. i love you so.
+                        you don't use spotfy, so i think i found a way for us to listen to it here. yay.
                     </p>
                     <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/37i9dQZF1DXcBWIGoYBM5M?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
                 </div>
