--- a/index.html
+++ b/index.html
@@ -584,7 +584,7 @@
         }, 1000);
         
         // --- Editable content ---
-        const PENDING_TASKS = [ "I'll remember that he loves me, no matter what I do, for I am his submissive babygirl, his personal princess.", "I'll remember that I am going to keep trying to be the best version of me, no matter what happens, and he's going to help me every step of the way.", "I am going to try to keep up with my weekly passive task.", "I'll remember that I can choose to do anything other than decided tasks too, or not do decided tasks, and that will be just okay." ];
+        const PENDING_TASKS = [ "I'll remember that you love me, no matter what I do, for I am your submissive babygirl, your personal princess.", "I'll remember that I am going to keep trying to be the best version of me, no matter what happens, and you're going to help me every step of the way.", "I am going to try to keep up with my weekly passive task.", "I'll remember that I can choose to do anything other than decided tasks too, or not do decided tasks, and that will be just okay." ];
         const MIND_OPTIONS = [ "I think I can work in an interview today. 😋", "Maybe I can take you along for a trip to the shower? 🚿", "I'd love a little one-on-one video call, maybe. 💞", "Can you just teach me how to dirty-talk well with you? 😙" ];
         const WHEEL_OPTIONS = [ "Placeholder 1", "Placeholder 2", "Placeholder 3", "Placeholder 4", "Placeholder 5", "Placeholder 6", "Placeholder 7", "Placeholder 8" ];
         const DRIVE_OPTIONS = {
