--- a/index.html
+++ b/index.html
@@ -545,7 +545,7 @@
             const apiKey = 'bb0b89c915f6aa455fb9e567ea0438ab'; 
             const cityDelhi = '1273294';
             const cityKolkata = '1275004';
-            if (apiKey && apiKey !== 'YOUR_API_KEY_HERE') {
+            if (apiKey && apiKey !== 'bb0b89c915f6aa455fb9e567ea0438ab') {
                 fetchWeatherForCity(cityDelhi, 'weather-delhi', 'this is what it is like in my city', apiKey);
                 fetchWeatherForCity(cityKolkata, 'weather-kolkata', 'this is what it is like in your city', apiKey);
             }
