--- a/index.html
+++ b/index.html
@@ -498,7 +498,7 @@
             </div>
             <div class="tab" data-tab="mind">
                 <svg class="tab-icon" viewBox="0 0 24 24"><path d="M18 8A6 6 0 0 0 6 8c0 7-3 9-3 9h18s-3-2-3-9"></path><path d="M13.73 21a2 2 0 0 1-3.46 0"></path></svg>
-                <span class="tab-text">mostly interactive stuff...</span>
+                <span class="tab-text">mostly interactive stuff.</span>
             </div>
             <div class="tab" data-tab="luck">
                 <svg class="tab-icon" viewBox="0 0 24 24"><polygon points="12 2 15.09 8.26 22 9.27 17 14.14 18.18 21.02 12 17.77 5.82 21.02 7 14.14 2 9.27 8.91 8.26 12 2"></polygon></svg>
@@ -518,7 +518,7 @@
             </div>
             <div class="tab" data-tab="growth">
                 <svg class="tab-icon" viewBox="0 0 24 24"><line x1="12" y1="5" x2="12" y2="19"></line><line x1="5" y1="12" x2="19" y2="12"></line></svg>
-                <span class="tab-text">test the limits of your...</span>
+                <span class="tab-text">test your limits</span>
             </div>
             <div class="tab locked" data-tab="vault">
                 <svg class="tab-icon" viewBox="0 0 24 24"><rect x="3" y="11" width="18" height="11" rx="2" ry="2"></rect><path d="M7 11V7a5 5 0 0 1 10 0v4"></path></svg>
