--- a/index.html
+++ b/index.html
@@ -692,16 +692,13 @@
         }
 
         function showPlaylist() {
-            // IMPORTANT: Replace 'YOUR_PLAYLIST_ID_HERE' with the actual ID from your Spotify playlist URL.
-            // For example, if your playlist URL is https://open.spotify.com/playlist/37i9dQZF1DXcBWIGoYBM5M
-            // then your ID is 37i9dQZF1DXcBWIGoYBM5M
             document.getElementById('contentArea').innerHTML = `
                 <div style="text-align: center;">
                     <h2 class="section-header">happy headache</h2>
                     <p style="opacity: 0.8; max-width: 600px; margin: -20px auto 30px auto;">
                         you don't use spotify, so i think i found a way for us to listen to it here. yay.
                     </p>
-                    <iframe style="border-radius:12px" src="https://open.spotify.com/playlist/4vy1nKzIatI2lfvLIw3P0F" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+                    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/37i9dQZF1DX4WYpdgoIcn6?utm_source=generator&theme=0" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
                 </div>`;
         }
 
