--- a/index.html
+++ b/index.html
@@ -612,10 +612,10 @@
         function updateWeather() {
             // IMPORTANT: Replace 'YOUR_API_KEY_HERE' with your actual OpenWeatherMap API key.
             // For security in a real application, it's best to use a backend proxy to hide the key.
-            const apiKey = 'YOUR_API_KEY_HERE'; 
+            const apiKey = 'bb0b89c915f6aa455fb9e567ea0438ab'; 
             const cityDelhi = '1273294';
             const cityKolkata = '1275004';
-            if (apiKey && apiKey !== 'YOUR_API_KEY_HERE') {
+            if (apiKey && apiKey !== 'bb0b89c915f6aa455fb9e567ea0438ab') {
                 fetchWeatherForCity(cityDelhi, 'weather-delhi', 'this is what it is like in my city', apiKey);
                 fetchWeatherForCity(cityKolkata, 'weather-kolkata', 'this is what it is like in your city', apiKey);
             }
