--- a/index.html
+++ b/index.html
@@ -1113,7 +1113,7 @@
         function showPendingTasks() {
             renderOptions(
                 document.getElementById('contentArea'),
-                "some things you should never forget ",
+                "some things you should never forget🤍 ",
                 PENDING_TASKS,
                 'task-card',
                 handleTaskClick
