--- a/index.html
+++ b/index.html
@@ -1321,7 +1321,7 @@
                     for (let i = 0; i < 5; i++) {
                         const heart = document.createElement('div');
                         heart.className = 'heart';
-                        heart.innerHTML = ' ';
+                        heart.innerHTML = '🤍';
                         heart.style.left = `${e.clientX}px`;
                         heart.style.top = `${e.clientY}px`;
                         const randomX = (Math.random() - 0.5) * 80;
