--- a/index.html
+++ b/index.html
@@ -101,6 +101,10 @@
             }
         }
         @keyframes float-up {
+            from {
+                opacity: 1;
+                transform: translateY(0);
+            }
             to {
                 transform: translateY(-100px);
                 opacity: 0;
@@ -669,7 +673,7 @@
             </div>
         </nav>
         <main class="content-area" id="contentArea">
-            </main>
+        </main>
     </div>
     <footer class="bottom-ribbon">
         <div class="weather-display-container">
