--- a/index.html
+++ b/index.html
@@ -623,6 +623,37 @@
                 gap: 10px;
             }
         }
+        /* --- Custom Scrollbar Styles --- */
+html::-webkit-scrollbar,
+.content-area::-webkit-scrollbar {
+    width: 8px;
+}
+
+html::-webkit-scrollbar-track,
+.content-area::-webkit-scrollbar-track {
+    background: var(--bg-content);
+}
+
+html::-webkit-scrollbar-thumb,
+.content-area::-webkit-scrollbar-thumb {
+    background-color: var(--primary-purple);
+    border-radius: 10px;
+    border: 2px solid var(--bg-content);
+}
+
+html::-webkit-scrollbar-thumb:hover,
+.content-area::-webkit-scrollbar-thumb:hover {
+    background-color: var(--primary-lavender);
+}
+
+/* Light theme override for scrollbar */
+body.light-theme ::-webkit-scrollbar-track {
+    background: var(--bg-dark);
+}
+
+body.light-theme ::-webkit-scrollbar-thumb {
+     border-color: var(--bg-dark);
+}
     </style>
 </head>
 <body>
