--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
             color: var(--text-light);
             text-shadow: 0 2px 10px rgba(0,0,0,0.5);
             cursor: none;
-            transition: letter-spacing 0.4s ease, color 0.4s ease;
+            transition: letter-spacing: 0.4s ease, color 0.4s ease;
         }
         .main-title:hover {
             letter-spacing: 4px;
@@ -502,7 +502,7 @@
         /* --- Floating Output Popup --- */
         .floating-output {
             position: fixed;
-            bottom: 95px;
+            bottom: 110px; /* Adjusted to make space for fullscreen button */
             right: 20px;
             background: var(--bg-dark);
             color: var(--text-light);
@@ -522,7 +522,7 @@
             opacity: 1;
         }
 
-        /* --- THEME TOGGLE --- */
+        /* --- THEME TOGGLE & FULLSCREEN BUTTON --- */
         .sidebar-footer {
             margin-top: auto;
             padding: 20px 0;
@@ -540,6 +540,65 @@
         .theme-toggle:hover .tab-icon {
              opacity: 1;
              transform: scale(1.1) rotate(15deg);
+        }
+        
+        #fullscreen-btn {
+            position: fixed;
+            bottom: 100px;
+            right: 30px;
+            width: 40px;
+            height: 40px;
+            background: var(--bg-content);
+            border: 1px solid rgba(255, 255, 255, 0.1);
+            border-radius: 50%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            z-index: 1001;
+            cursor: none;
+            transition: all 0.3s ease;
+        }
+        #fullscreen-btn:hover {
+            background: var(--primary-purple);
+            transform: scale(1.1);
+        }
+        #fullscreen-btn svg {
+            width: 20px;
+            height: 20px;
+            stroke: var(--primary-lavender);
+            stroke-width: 2;
+        }
+
+        /* --- Custom Scrollbar Styles --- */
+        html::-webkit-scrollbar,
+        .content-area::-webkit-scrollbar {
+            width: 8px;
+        }
+
+        html::-webkit-scrollbar-track,
+        .content-area::-webkit-scrollbar-track {
+            background: var(--bg-content);
+        }
+
+        html::-webkit-scrollbar-thumb,
+        .content-area::-webkit-scrollbar-thumb {
+            background-color: var(--primary-purple);
+            border-radius: 10px;
+            border: 2px solid var(--bg-content);
+        }
+
+        html::-webkit-scrollbar-thumb:hover,
+        .content-area::-webkit-scrollbar-thumb:hover {
+            background-color: var(--primary-lavender);
+        }
+
+        /* Light theme override for scrollbar */
+        body.light-theme ::-webkit-scrollbar-track {
+            background: var(--bg-dark);
+        }
+
+        body.light-theme ::-webkit-scrollbar-thumb {
+            border-color: var(--bg-dark);
         }
 
 
@@ -609,7 +668,11 @@
             .floating-output {
                 width: calc(100% - 40px);
                 right: 20px;
-                bottom: 90px;
+                bottom: 155px; /* Adjusted */
+            }
+            #fullscreen-btn {
+                bottom: 100px;
+                right: 20px;
             }
             .wheel-wrapper {
                 width: 320px;
@@ -623,37 +686,6 @@
                 gap: 10px;
             }
         }
-        /* --- Custom Scrollbar Styles --- */
-html::-webkit-scrollbar,
-.content-area::-webkit-scrollbar {
-    width: 8px;
-}
-
-html::-webkit-scrollbar-track,
-.content-area::-webkit-scrollbar-track {
-    background: var(--bg-content);
-}
-
-html::-webkit-scrollbar-thumb,
-.content-area::-webkit-scrollbar-thumb {
-    background-color: var(--primary-purple);
-    border-radius: 10px;
-    border: 2px solid var(--bg-content);
-}
-
-html::-webkit-scrollbar-thumb:hover,
-.content-area::-webkit-scrollbar-thumb:hover {
-    background-color: var(--primary-lavender);
-}
-
-/* Light theme override for scrollbar */
-body.light-theme ::-webkit-scrollbar-track {
-    background: var(--bg-dark);
-}
-
-body.light-theme ::-webkit-scrollbar-thumb {
-     border-color: var(--bg-dark);
-}
     </style>
 </head>
 <body>
@@ -713,11 +745,12 @@ body.light-theme ::-webkit-scrollbar-thumb {
         </div>
     </footer>
     <div class="floating-output" id="floatingOutput"></div>
+    <div id="fullscreen-btn"></div>
 
     <script>
         // --- REAL-WORLD CONNECTION (WEATHER) ---
         function updateWeather() {
-            const apiKey = '39a052f2c513c4d6250d4ac4c5903953'; // Replace with your actual key if needed
+            const apiKey = 'bb0b8c915f6aa455fb9e567ea0438ab'; // Replace with your actual key if needed
             const cityDelhi = '1273294';
             const cityKolkata = '1275004';
 
@@ -806,9 +839,9 @@ body.light-theme ::-webkit-scrollbar-thumb {
             "I will ask you for a mango milkshake"
         ];
         const DRIVE_OPTIONS = {
-            level1: [ "Passive Tasks?", "A sexy video?", "A hot picture?" ],
+            level1: [ "Passive Tasks?   ", "A sexy video?  ", "A hot picture? " ],
             level2: {
-                "Passive Tasks?": [ "Clothing-related", "Mind-related ", "Other Passive Tasks " ],
+                "Passive Tasks?   ": [ "Clothing-related  ", "Mind-related ", "Other Passive Tasks " ],
                 "A sexy video?  ": [ "Starting Clothed ", "Starting Nude ", "Special Submission " ],
                 "A hot picture? ": [ "Object-interaction ", "Accessories ", "Special Submissive " ]
             },
@@ -1387,6 +1420,52 @@ body.light-theme ::-webkit-scrollbar-thumb {
                     buildSvgWheel();
                 }
             });
+
+            // --- FULLSCREEN LOGIC ---
+            const fullscreenBtn = document.getElementById('fullscreen-btn');
+            const enterFullscreenIcon = `<svg viewBox="0 0 24 24" fill="none" stroke-linecap="round" stroke-linejoin="round"><path d="M8 3H5a2 2 0 0 0-2 2v3m18 0V5a2 2 0 0 0-2-2h-3m0 18h3a2 2 0 0 0 2-2v-3M3 16v3a2 2 0 0 0 2 2h3"></path></svg>`;
+            const exitFullscreenIcon = `<svg viewBox="0 0 24 24" fill="none" stroke-linecap="round" stroke-linejoin="round"><path d="M8 3v3a2 2 0 0 1-2 2H3m18 0h-3a2 2 0 0 1-2-2V3m0 18v-3a2 2 0 0 1 2-2h3M3 16h3a2 2 0 0 1 2 2v3"></path></svg>`;
+
+            fullscreenBtn.innerHTML = enterFullscreenIcon;
+
+            function toggleFullScreen() {
+              const doc = document.documentElement;
+              if (!document.fullscreenElement && !document.mozFullScreenElement && !document.webkitFullscreenElement && !document.msFullscreenElement) {
+                if (doc.requestFullscreen) {
+                  doc.requestFullscreen();
+                } else if (doc.msRequestFullscreen) {
+                  doc.msRequestFullscreen();
+                } else if (doc.mozRequestFullScreen) {
+                  doc.mozRequestFullScreen();
+                } else if (doc.webkitRequestFullscreen) {
+                  doc.webkitRequestFullscreen(Element.ALLOW_KEYBOARD_INPUT);
+                }
+              } else {
+                if (document.exitFullscreen) {
+                  document.exitFullscreen();
+                } else if (document.msExitFullscreen) {
+                  document.msExitFullscreen();
+                } else if (document.mozCancelFullScreen) {
+                  document.mozCancelFullScreen();
+                } else if (document.webkitExitFullscreen) {
+                  document.webkitExitFullscreen();
+                }
+              }
+            }
+            
+            function updateFullscreenIcon() {
+                if (!document.fullscreenElement && !document.webkitFullscreenElement) {
+                    fullscreenBtn.innerHTML = enterFullscreenIcon;
+                } else {
+                    fullscreenBtn.innerHTML = exitFullscreenIcon;
+                }
+            }
+
+            fullscreenBtn.addEventListener('click', toggleFullScreen);
+            document.addEventListener('fullscreenchange', updateFullscreenIcon);
+            document.addEventListener('webkitfullscreenchange', updateFullscreenIcon);
+            document.addEventListener('mozfullscreenchange', updateFullscreenIcon);
+            document.addEventListener('MSFullscreenChange', updateFullscreenIcon);
 
             showIntroScreen();
             updateWeather();  
